--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,21 @@ version: 2.1
 jobs:
   print-hello:
     docker:
-      - image: cimg/node:17.2.0 # the primary container, where your job's commands are run
+      - image: cimg/node:17.2.0
     steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello!" # run the `echo` command
-  
-  print-world:   
+      - checkout
+      - run: echo "hello!"
+
+  print-world:
     docker:
       - image: cimg/node:17.2.0
     steps:
-      - run: echo "world!"   
+      - run: echo "world!"
 
 workflows:
   my-workflow:
     jobs:
       - print-hello
       - print-world:
-        requires:
-          - print-hello
+          requires:
+            - print-hello
