Implement print my name job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - run: echo "world!"
 
+  print-my-name:
+    docker:
+      - image: cimg/node:17.2.0
+    steps:
+      - run: echo "My name is $USER_NAME"        
+
 workflows:
   my-workflow:
     jobs:
@@ -21,3 +27,6 @@ workflows:
       - print-world:
           requires:
             - print-hello
+      - print-my-name:
+          requires:
+            - print-world      
