--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,5 @@ workflows:
       - save_hello_world_output
       - print_output_file:
           requires:
-            - ave_hello_world_output
+            - save_hello_world_output
       - print-my-name    
