--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: cimg/node:17.2.0
     steps:
       - checkout
-      - run: echo "text to output here" > output.txt
+      - run: echo "text to output here" > /tmp/workspace/output.txt
       - persist_to_workspace:
           root: /tmp/workspace
           paths: 
