--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
       - image: cimg/node:17.2.0
     steps:
       - checkout
-      - run: echo "text to output here" > output.txt
+      - run: echo "text to output here" > /tmp/workspace/output.txt
       - persist_to_workspace:
-          root: /
+          root: /tmp/workspace
           paths: 
             - output.txt
 
@@ -17,8 +17,8 @@ jobs:
       - image: cimg/node:17.2.0
     steps:
       - attach_workspace:
-          at: /
-      - run: cat output.txt
+          at: /tmp/workspace
+      - run: cat /tmp/workspace/output.txt
 
 
   print-my-name:
