--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,9 @@ jobs:
       - image: cimg/node:17.2.0
     steps:
       - checkout
-      - run: mkdir -p /tmp/workspace
-      - run: echo "text to output here" > /tmp/workspace/output.txt
+      - run: echo "text to output here" > ~/output.txt
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: ~/
           paths: 
             - output.txt
 
@@ -18,8 +17,8 @@ jobs:
       - image: cimg/node:17.2.0
     steps:
       - attach_workspace:
-          at: /tmp/workspace
-      - run: cat /tmp/workspace/output.txt
+          at: ~/
+      - run: cat ~/output.txt
 
 
   print-my-name:
