--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,10 @@
 version: 2.1
 
+commands: 
+  print_pipeline_id:
+    description: "Print Circle CI workflow Id"
+    steps:
+      - run: echo "Workflow id: $CIRCLE_WORKFLOW_ID"   
 jobs:
   save_hello_world_output:
     docker:
@@ -25,7 +30,13 @@ jobs:
     docker:
       - image: cimg/node:17.2.0
     steps:
-      - run: echo "My name is $USER_NAME"        
+      - run: echo "My name is $USER_NAME"      
+
+  use-command: 
+    docker:
+      - image: cimg/node:17.2.0 
+    steps:
+      - print_pipeline_id     
 
 workflows:
   my-workflow:
